# GooE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-debug.bat  build-pre-release.bat  build-release.bat
libs/gooeLog/: log.h
src/: CMakeLists.txt  const.h  main.c  meta.h.in
src/core/: CMakeLists.txt  assetLoader.c  assetLoader.h  audio.c  audio.h  gooe.c  gooe.h  renderer.c  renderer.h  types.h  window.c  window.h
src/libs/: CMakeLists.txt
src/libs/gooeLog/: CMakeLists.txt  README.md  log.h
